# api/models/user.go
@@ -1,14 +1,13 @@
 package models
 
+
 type User struct {
-	UserId      string `json:"user_id"`
-	FirstName   string `json:"first_name"`
-	LastName    string `json:"last_name"`
-	Login       string `json:"login"`
-	Password    string `json:"password"`
-	PhoneNumber string `json:"phone_number"`
-	CreatedAt   string `json:"created_at"`
-	UpdatedAt   string `json:"updated_at"`
+	Id        string `json:"id"`
+	Name      string `json:"name"`
+	Login     string `json:"login"`
+	Password  string `json:"password"`
+	CreatedAt string `json:"created_at"`
+	UpdatedAt string `json:"updated_at"`
 }
 type UserPKey struct {
 	UserId string `json:"user_id"`
